--- a/app/components/Footer/Footer.module.scss
+++ b/app/components/Footer/Footer.module.scss
@@ -1,29 +1,7 @@
 .footer {
-  position: absolute;
-  bottom: -25%;
+  bottom: 0;
   left: 0;
-  right: 0;
-  width: 100%;
-
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-    margin: auto;
-    width: 100%;
-  }
-
-  li {
-    padding: 1rem;
-
-    a {
-      text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
+  padding: 10px;
+  text-align: center;
+  width: 100% !important;
 }
